crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_callers_engine_update.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 100,
  "offset": 0,
  "results": [
    {
      "depth": 1,
      "file": "[testdata]/main.cpp",
      "line": 11,
      "symbol_id": "[testdata]/main.cpp:main"
    }
  ],
  "total": 1
}
