crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_callers_paginated_offset.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 50,
  "offset": 50,
  "results": [
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 114,
      "symbol_id": "[testdata]/hub.cpp:caller_050"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 115,
      "symbol_id": "[testdata]/hub.cpp:caller_051"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 116,
      "symbol_id": "[testdata]/hub.cpp:caller_052"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 117,
      "symbol_id": "[testdata]/hub.cpp:caller_053"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 118,
      "symbol_id": "[testdata]/hub.cpp:caller_054"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 119,
      "symbol_id": "[testdata]/hub.cpp:caller_055"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 120,
      "symbol_id": "[testdata]/hub.cpp:caller_056"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 121,
      "symbol_id": "[testdata]/hub.cpp:caller_057"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 122,
      "symbol_id": "[testdata]/hub.cpp:caller_058"
    },
    {
      "depth": 1,
      "file": "[testdata]/hub.cpp",
      "line": 123,
      "symbol_id": "[testdata]/hub.cpp:caller_059"
    }
  ],
  "total": 60
}
