crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_engine.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "derived": [
    {
      "name": "DebugEngine"
    }
  ],
  "name": "Engine"
}
