crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_go_interface_reader.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
assertion_line: 939
expression: parsed
---
{
  "name": "Reader"
}
