crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_python_dog.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "hierarchy": {
    "bases": [
      {
        "derived": [
          {
            "name": "Dog"
          }
        ],
        "name": "Animal"
      }
    ],
    "name": "Dog"
  },
  "max_nodes": 250,
  "total_nodes_seen": 2,
  "truncated": false
}
