crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_rust_trait_greet.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "derived": [
    {
      "bases": [
        {
          "name": "Greet"
        }
      ],
      "name": "Greeter"
    }
  ],
  "name": "Greet"
}
