crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_class_hierarchy_truncated.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "hierarchy": {
    "derived": [
      {
        "bases": [
          {
            "name": "Compute"
          }
        ],
        "name": "Foo<T>"
      }
    ],
    "name": "Compute"
  },
  "max_nodes": 2,
  "total_nodes_seen": 2,
  "truncated": true
}
