crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_coupling_engine_cpp_both.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "[testdata]/engine.h": 1,
  "[testdata]/main.cpp": 3,
  "[testdata]/utils.cpp": 3,
  "[testdata]/utils.h": 1
}
