crates/codegraph-tools/tests/snapshots/snapshot_responses__response_get_coupling_engine_cpp_incoming.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "[testdata]/main.cpp": 3
}
